--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Application
 SERVER_PORT=8080
-SECURITY_API_KEYS=local-dev-key,another-key
-RATE_LIMIT_REQUESTS_PER_MINUTE=120
+SECURITY_API_KEY_SECRET=chatstorage
+KEY_EXPIRATION_MS=60000
+RATE_LIMIT_REQUESTS_PER_MINUTE=10
 CORS_ALLOWED_ORIGINS=http://localhost:3000
 
 # Database
