--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
      driver: json-file
      options:
       max-size: "10m"
-      max-file: "5
+      max-file: "5"
 
   adminer:
     image: adminer:4
